story page size/spacing on mobile, fixes #3

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ button {
 #header-section {
     width:100%;
     height:700px;
-      background: url("../images/Header.png") no-repeat top center;
+    background: no-repeat top center;
     background-size: cover;
     background-color: rgba(0,0,0,0.5); /* Black background with opacity */
     position: relative;
